--- a/branches/sso/of/of/public/stylesheets/openfoundry.css
+++ b/branches/sso/of/of/public/stylesheets/openfoundry.css
@@ -242,7 +242,30 @@ width:500px;
 .SurveyItemMasked {background-color:#123456;}
 
 /* for current page text on will_paginate */
-.current { text-decoration: underline overline; font-weight:bold; }
+/*.current { text-decoration: underline overline; font-weight:bold; }*/
+  .pagination {
+    text-align:center;
+    padding: 3px;
+    margin: 3px;
+  }
+  .pagination a {
+    padding: 2px 5px 2px 5px;
+    margin: 2px;
+    text-decoration: none;
+  }
+  .pagination a:hover, .pagination a:active {
+  }
+  .pagination span.current {
+    padding: 2px 5px 2px 5px;
+    margin: 2px;
+    font-weight: bold;
+  }
+  .pagination span.disabled {
+    padding: 2px 5px 2px 5px;
+    margin: 2px;
+  }
+
+
 
 /* for layout of news list */
 .sort { margin-bottom: 5px; }
