add multi-language tag "Upload a new document":

--- a/branches/sso/of/of/app/views/nscreports/index.html.erb
+++ b/branches/sso/of/of/app/views/nscreports/index.html.erb
@@ -29,6 +29,6 @@ Reviews:<br>
 <% end %>
 
 <hr>
-<%= link_to "Upload a new document", :action => "new" %>
+<%= link_to _("Upload a new document"), :action => "new" %>
 
 <% end %>
