--- a/branches/sso/of/of/app/views/layouts/integration.html.erb
+++ b/branches/sso/of/of/app/views/layouts/integration.html.erb
@@ -73,7 +73,7 @@
                             <select id="of_search_type">
                               <option value="Projects"><%=_('Projects')%></option>
                               <option value="Content"><%=_('Content')%></option>
-                              <option value="Community"><%=_('People')%></option>
+                              <option value="People"><%=_('People')%></option>
                             </select>
                             <input id="query" name="query" id="mod_search_searchword" maxlength="20" alt="search" class="inputbox" type="text" size="28" value="search..."  onblur="if(this.value=='') this.value='search...';" onfocus="if(this.value=='search...') this.value='';" />
                             <input type="hidden" name="commit" value="search" />
@@ -209,5 +209,7 @@
       </div>
 
     </div>
+test
   </body>
 </html>
+
