--- a/branches/category/of/app/views/partials/_homeleft.html.erb
+++ b/branches/category/of/app/views/partials/_homeleft.html.erb
@@ -3,7 +3,7 @@
              :locals => {:userCount => User.count(:conditions => User.verified_users),
                   :projectCount => Project.count(:conditions => Project.in_used_projects())
                   } %>
-  <%= render :partial => 'category/tagcloud_module' unless controller.controller_name == 'openfoundry' && controller.action_name == 'search' %>
+  <%= render :partial => 'category/tagcloud_module' %>
   <%= render :partial => "partials/home_menu" %>
   <%#= render :partial => "news/home_news", :locals =>{:newsList => News.home_news, :showDescr => false} %>
 </div>
