--- a/branches/category/of/app/views/category/_tagcloud_module.html.erb
+++ b/branches/category/of/app/views/category/_tagcloud_module.html.erb
@@ -4,7 +4,7 @@
 
 <% module_content = capture do -%>
   <% Tagcloud.tags_assign_font_size( '' ).each do | s | -%>
-    <%="<a href=\"#\"><font style=\"font-size: #{ s[ :font ] }px;\">#{ s[ :name ] }</font></a>(#{ s[ :tagged ] }) " %>
+    <%=link_to "#{ s[ :name ] }", list_category_path( :cat_query => "#{ s[ :name ] }" ), :style => "font-size: #{ s[ :font ] }px;" %><%="(#{ s[ :tagged ] })" %>
   <% end -%>
 <% end -%>
 
