--- a/branches/category/of/app/views/openfoundry/search.html.erb
+++ b/branches/category/of/app/views/openfoundry/search.html.erb
@@ -21,7 +21,7 @@ no record!
   <p>
   <%=t( 'tagcloud.title' ) %><br/>
     <% Tagcloud.tags_assign_font_size( 'ALL' ).each do | s | -%>
-      <%="<a href=\"#\"><font style=\"font-size: #{ s[ :font ] }px;\">#{ s[ :name ] }</font></a>(#{ s[ :tagged ] }) " %>
+      <%=link_to "#{ s[ :name ] }", list_category_path( :cat_query => "#{ s[ :name ] }" ), :style => "font-size: #{ s[ :font ] }px;" %><%="(#{ s[ :tagged ] })" %>
     <% end -%>
   </p>
 </div>
