--- a/branches/module/app/views/partials/_project_menu.html.erb
+++ b/branches/module/app/views/partials/_project_menu.html.erb
@@ -3,7 +3,7 @@
   document.observe("dom:loaded", project_leftmenu_init);
 </script>
 <%
-  functions = Function::functions(:authorizable_id => params["project_id"].to_i, :user_id => current_user.id)
+  functions = Permission::functions(:authorizable_id => params["project_id"].to_i, :user_id => current_user.id)
   is_nsc_project = @project.is_nsc_project
 %>
 
