--- a/branches/category/of/app/views/category/_tagcloud_module.html.erb
+++ b/branches/category/of/app/views/category/_tagcloud_module.html.erb
@@ -1,11 +1,7 @@
-<% module_title = capture do -%>
-  <%=t( 'tagcloud.title' )%>
-<% end -%>
-
 <% module_content = capture do -%>
   <% Tagcloud.tags_assign_font_size( '' ).each do | s | -%>
     <%=link_to "#{ s[ :name ] }", list_category_path( :cat_query => "#{ s[ :name ] }" ), :style => "font-size: #{ s[ :font ] }px;" %><%="(#{ s[ :tagged ] })" %>
   <% end -%>
 <% end -%>
 
-<%= render :file => 'layouts/rt_module', :locals => {:module_title => module_title, :module_content => module_content, :variation => 'square1'} %>
+<%= render :file => 'layouts/rt_module', :locals => { :module_content => module_content, :variation => 'square1' } %>
