--- a/branches/category/of/app/views/category/_project_select.html.erb
+++ b/branches/category/of/app/views/category/_project_select.html.erb
@@ -1,5 +1,5 @@
 <% @module_name = capture do -%>
-  <%='Project Category' %>
+  <%=t( 'Menu.Category' ) %>
 <% end -%>
 
 <div id="ProjectSelect" name="ProjectSelect">
@@ -16,14 +16,6 @@
 	   # post both of select, checkbox, and search
   %>
 
-	<%=check_box( 'is_nsc', 'validated', :checked => ( params[ :nsc_or_not ] == 'true' ) ) + 'NSC Project' %>
-  <%=observe_field 'is_nsc_validated',
-		 							 :url => { :controller => :category, :action => :list },
-		 							 :update => 'ProjectFilterList',
-		 							 :with => "'cat=' + escape( $( 'category_id' ).value ) + '&nsc_or_not=' + escape( $( 'is_nsc_validated' ).checked ) + '&cat_query=' + escape( $( 'cat_query' ).value )"
-	   # post both of select, checkbox, and search
-  %><br>
-
 	<%=text_field_tag( 'cat_query', params[ :cat_query ], :autocomplete => 'off' ) %>
 	<%=observe_field 'cat_query',
 									 :url => { :controller => :category, :action => :list },
@@ -33,9 +25,16 @@
 									 :loaded => "Element.hide( 'Search_Loading' )",
 		               :with => "'cat=' + escape( $( 'category_id' ).value ) + '&nsc_or_not=' + escape( $( 'is_nsc_validated' ).checked ) + '&cat_query=' + escape( $( 'cat_query' ).value )"
 	   # post both of select, checkbox, and search
-%>
+  %>
+  <a href="<%="#{ root_path }openfoundry/search?adv_cat=&query=" %>"><%=t( 'Advanced Options' ) %></a>
 
-<a href="<%="#{ root_path }openfoundry/search?adv_cat=&query=" %>"><%=t( 'Advanced Options' ) %></a>
+	<%=check_box( 'is_nsc', 'validated', :checked => ( params[ :nsc_or_not ] == 'true' ) ) + 'NSC Project' %>
+  <%=observe_field 'is_nsc_validated',
+		 							 :url => { :controller => :category, :action => :list },
+		 							 :update => 'ProjectFilterList',
+		 							 :with => "'cat=' + escape( $( 'category_id' ).value ) + '&nsc_or_not=' + escape( $( 'is_nsc_validated' ).checked ) + '&cat_query=' + escape( $( 'cat_query' ).value )"
+	   # post both of select, checkbox, and search
+  %>
 <img id="Search_Loading" width="15px" height="15px" src="../images/ajax-loader.gif" style="display:none"/>
-
+<br>
 </div>
