Set the default text of prject category selections

--- a/branches/category/of/app/views/category/_project_select.html.erb
+++ b/branches/category/of/app/views/category/_project_select.html.erb
@@ -6,7 +6,7 @@
 
   <%=select( 'category', 'id',
 						 Tagcloud.find( :all, :conditions => { :status => 1, :tag_type => 1 } ).collect { | c | [ c.name, c.id ] },
-						 { :include_blank => true, :selected => params[ :cat ].to_i } )
+						 { :include_blank => 'Select Category', :selected => params[ :cat ].to_i } )
 		 # :selected is stored last status of checkbox ( it must be string!! )
   %>
   <%=observe_field 'category_id',
