--- a/branches/category/of/app/views/openfoundry/search.html.erb
+++ b/branches/category/of/app/views/openfoundry/search.html.erb
@@ -4,24 +4,40 @@
     <%= render :partial => 'partials/search', :locals =>{:size => 45, :adv => true}%>	
   </div>
   <%unless @results.empty?%>
-  <%= paginate = will_paginate @results %>  
-  <table class='form-table'>
-    <% @results.each do |record| %>
+    <%unless @filter_blank_or_not.blank?%>
+    <%= paginate = will_paginate @final_project_list %>  
+    <table class='form-table'>
       <tr>
-        <%= render(:partial => "#{@lookup[record.class.class_name]}/search_hit", :layout => false, :locals => {:record => record}) %>
+        <th><%= "Logo" %></th>
+        <th><%= link_to "Name", sort_param( 'listing', Project, 'name', 'name' ) %></th>
+        <th><%=link_to 'Summary', sort_param( 'listing', Project, 'summary', 'summary' ) %></th>
+        <th><%=link_to 'Category', sort_param( 'listing', Project, 'category', 'category' ) %></th>
+        <th><%= "Tags" %></th>
       </tr>
-    <% end %>
-  </table>
-  <%= paginate %>  
-  <%else%>
-no record!
-  <%end%>
-
-  <br/><br/>
-  <p>
-  <%=t( 'tagcloud.title' ) %><br/>
+      <% i = 0; class_name = ''; -%> 
+      <% for project in @final_project_list -%> 
+        <% i = 1 - i -%> 
+        <% if i == 1; class_name = 'odd'; else; class_name = 'even'; end; -%> 
+          <tr class="item_h <%=class_name %>">
+            <td><%= project_logo_link(project)%></td>
+            <td><a href = "<%=url_for( :controller => 'projects', :action => 'show', :id => project.id ) %>"><%=h( project.name ) %></a></td>
+            <td><%=h( project.summary ) %></td>
+            <td><%=h( project.cattag.name ) unless project.cattag.nil? %></td>
+            <td><%=h( project.alltags.map{|m| m.name}.join(", ") ) unless project.alltags.nil? %></td>
+          </tr>
+      <% end %>
+      </table>
+      <%= paginate %>
+    <% else -%>
+      input some keywords!
+    <% end -%>
+    <%else-%>
+      no record!
+    <%end-%>
+    <br/><br/>
+    <p>
     <% Tagcloud.tags_assign_font_size( 'ALL' ).each do | s | -%>
       <%=link_to "#{ s[ :name ] }", list_category_path( :cat_query => "#{ s[ :name ] }" ), :style => "font-size: #{ s[ :font ] }px;" %><%="(#{ s[ :tagged ] })" %>
     <% end -%>
-  </p>
-</div>
+    </p>
+  </div>
