--- a/branches/category/of/app/views/partials/_search.html.erb
+++ b/branches/category/of/app/views/partials/_search.html.erb
@@ -1,8 +1,43 @@
-<% adv ||= false %>
+<% adv ||= false %> 
 <% form_tag url_for(:controller => :openfoundry, :action => :search), :method => :get do -%>
-  <%= text_field_tag( (if adv;'query_adv';else'query';end),@query, :size => size ) %>
+	<% if params[:adv_cat] %>
+  <input name="adv_cat" type="hidden" value="">
+  <%= select( 'project', 'category',
+						 Tagcloud.find( :all, :conditions => { :status => 1, :tag_type => 1 } ).collect { | c | [ c.name, c.id ] },
+             { :include_blank => '(Category)' } )
+  %>
+
+	<%=check_box( 'is_nsc', 'validated', :checked => ( params[ :nsc_or_not ] == 'true' ) ) + 'NSC Project' %>
+	<br/>
+	<% end %>
+
+	<%= text_field_tag( (if adv;'query_adv';else'query';end), @query, :size => (if adv and params[:adv_cat].nil?;size;end) ) %>
+
+	<% if params[:adv_cat] %>
+	<%= select( 'project', 'maturity', 
+						 Project::MATURITY.values.sort.map{ |x|[I18n.t(Project::MATURITY.index(x).to_s), x]},
+             { :prompt => '(Maturity)' } )
+  %>
+  <br/>
+
+	<%=select( 'project', 'license',	Project::LICENSE_DATA.map{ |i,j| [(i > 0 ? j : I18n.t(j)), i] },
+            { :include_blank => '(License)' } )
+	%>
+  <br/>
+
+	<%=select( 'project', 'platform',	Project::PLATFORMS.map{ |i| i },
+						{ :include_blank => '(Platform)' } )
+	%>
+	<br/>
+
+	<%= select( 'project', 'programminglanguage', 
+						 Project::PROGRAMMING_LANGUAGES.map{ |i| i },
+						 { :include_blank => '(Programming Language)' } )
+	%>
+	<% end %>
+
   <%= submit_tag _('search'), :class => 'button' %>
-  <%if adv%>
+  <%if adv and params[:adv_cat].nil? %>
     <a href="#" onclick="Effect.toggle('search_chk','appear');Effect.toggle('search_inc','appear');
      document.getElementById('query_adv').value=''; return false">
     <%=_('Advanced Options')%>
@@ -34,7 +69,7 @@
         <fieldset>
           <legend><%= _('Search in Class') %></legend>
           <div id='query_chk_class'>
-            <% %w(Project News Release Fileentity).each_with_index do |model_class,i| %>
+            <% %w(Projects News Release Fileentity).each_with_index do |model_class,i| %>
               <%= check_box_tag model_class, true, false, :name => "chk[#{model_class}]"%> 
               <%= _(model_class) %>
               <%= if i%6 == 5 ;"<br/>"; end %>
