--- a/branches/category/of/app/views/openfoundry/search.html.erb
+++ b/branches/category/of/app/views/openfoundry/search.html.erb
@@ -37,7 +37,7 @@
     <br/><br/>
     <p>
     <% Tagcloud.tags_assign_font_size( 'ALL' ).each do | s | -%>
-      <%=link_to "#{ s[ :name ] }", list_category_path( :cat_query => "#{ s[ :name ] }" ), :style => "font-size: #{ s[ :font ] }px;" %><%="(#{ s[ :tagged ] })" %>
+      <%=link_to "#{ s[ :name ] }", list_category_path( :cat_query => "#{ s[ :name ] }" ), :style => "font-size: #{ s[ :font ] }px;" %>
     <% end -%>
     </p>
   </div>
