--- a/branches/category/of/app/views/projects/edit.html.erb
+++ b/branches/category/of/app/views/projects/edit.html.erb
@@ -1,24 +1,7 @@
-<script type="text/javascript">
-  function __premark()
-  {
-    var data = '';
-    $j( '#Tags_List div' ).each(
-      function()
-      {
-        data += ',' + $j( this ).text();
-      }
-    );
-    
-    $j( '#__clibeanna' ).val( data.substring( 2 ) );
-  }
-</script>
 <div id="ProjectEdit">
 <% form_tag url_for(:action => 'update', :id => @project), :method => 'put' do %>
   <%= render :partial => 'form', :locals => { :is_edit => true } %>
   <%=hidden_field_tag '__clibeanna' %>
-  <%=button_to _("Save"), {}, { :onclick => "javascript: __premark(); this.submit();" } %>
+  <input type="button" value="<%=_( 'Save' ) %>" onclick="javascript: __premark(); submit();">
 <% end %>
-
-<!-- tags was here ... -->
-
 </div>
