--- a/branches/category/of/app/views/projects/_form.html.erb
+++ b/branches/category/of/app/views/projects/_form.html.erb
@@ -1,8 +1,8 @@
 <%# https://sourceforge.net/register-project %>
 <%# http://code.google.com/hosting/createProject %>
 
-<%=stylesheet_link_tag 'jquery.autocomplete' %>
-<%=javascript_include_tag 'jquery', 'jquery.autocomplete' %>
+<%=stylesheet_link_tag 'jquery.autocomplete', 'jquery.simpledialog' %>
+<%=javascript_include_tag 'jquery', 'jquery.autocomplete', 'jquery.simpledialog' %>
 
 <style type="text/css">
   .tagged
@@ -35,24 +35,33 @@
     if( input_tag != '' )
     {
       // prevent the chinese words
-      var rege = /^[a-zA-Z0-9 ]+$/;
+      var rege = /^[#+.!a-zA-Z0-9 ]+$/;
       if( !rege.test( input_tag ) )
       {
-        alert( "<%=t( 'Msg.Limited_Input' ) %>" );
+        // simple dialog
+        $j( '#msgbox p' ).text( "<%=t( 'Msg.Limited_Input' ) %>" );
+        $j( '#msg' ).click();
+
         return false;
       }
 
       var dupchk = false;
-      var divhead = '<div class="tagged" onclick="javascript: $( this ).remove();">';
+      var divhead = '<div class="tagged" onclick="javascript: remove_tag( $j( this ) );">';
 
       // prevent the duplicated tag to be tagged
       $j( '#Tags_List div' ).each(
         function()
         {
-          if( $j( this ).text() == input_tag )
+          if( $j( this ).text().toLowerCase() == input_tag.toLowerCase() )
           {
-            alert( "<%=t( 'Msg.Tag_Duplicated' ) %>" );
+            // simple dialog
+            $j( '#msgbox p' ).text( "<%=t( 'Msg.Tag_Duplicated' ) %>" );
+            $j( '#Tags_Ctrl' ).blur();
+            $j( '#msg' ).click();
+
+            // mark the tag is duplicated
             dupchk = true;
+
             return false;
           }
         }
@@ -64,12 +73,51 @@
     }
   }
 
+  // notification: how to remove tags
+  function tag_notify()
+  {
+    if( $j( '#Tags_List div' ).length > 1 )
+      $j( '#Tags_Remove' ).show();
+    else
+      $j( '#Tags_Remove' ).hide();
+
+    // clean input for google chrome
+    $j( '#Tags_Ctrl' ).val( '' );
+  }
+  
+  // determine the notification to display or not when removing a tag
+  function remove_tag( delobj )
+  {
+    delobj.remove();
+    tag_notify();
+  }
+
+  // pre-process for tags list before post the form
+  function __premark()
+  {
+    var data = '';
+    $j( '#Tags_List div' ).each(
+      function()
+      {
+        data += ',' + $j( this ).text();
+      }
+    );
+  
+    $j( '#__clibeanna' ).val( data.substring( 2 ) );
+  }
+
   // enhance the input with auto-complete
   $j( document ).ready(
     function()
     {
+      tag_notify();
+
+      // initial autocomplete
       var data = [ '<%=Tagcloud.cachedtags.map{ | t | t.name }.join( "','" ) %>' ];
       $j( '#Tags_Ctrl' ).autocomplete( data, { matchContains: false } );
+
+      // initial simpledialog
+      $j( '#msg' ).simpleDialog( { showCloseLabel: false } );
     }
   );
 </script>
@@ -122,7 +170,7 @@ AAA
   choosen_licenses = (@project.license || "").split(",").grep(/./).map(&:to_i)
   tmp_licenses = ""
   Project::LICENSE_DISPLAY_KEYS.each do |i|
-    tmp_licenses += check_box_tag("project[license][#{i}]", i, choosen_licenses.include?(i)) + ( i > 0 ? link_to( Project.license_to_s(i), _("url_link_for_#{Project.license_to_s(i).gsub('.', '_')}"), :target =>"_blank" ) : Project.license_to_s(i) ) + "<br>\n"
+    tmp_licenses += check_box_tag("project[license][#{i}]", i, choosen_licenses.include?(i)) + ( i > 0 ? link_to( Project.license_to_s(i), _("url_link_for_#{Project.license_to_s(i).gsub('.', '_')}"), :target =>"_blank" ) : t(Project.license_to_s(i)) ) + "<br>\n"
   end
   tmp_licenses = "<div style=\"height: 150px; overflow: auto\">#{tmp_licenses}</div>"
 %>
@@ -132,7 +180,7 @@ AAA
   Project::CONTENT_LICENSE_DISPLAY_KEYS.each do |i|
     txt = Project.content_license_to_s(i)
     txt += " " + cc_images(i)
-    tmp_contentlicenses += check_box_tag("project[contentlicense][#{i}]", i, choosen_contentlicenses.include?(i)) + ( i > 0 ? link_to( Project.content_license_to_s(i), _("url_link_for_#{Project.content_license_to_s(i)}"), :target => "_blank" ) : Project.content_license_to_s(i) ) + "<br>\n"
+    tmp_contentlicenses += check_box_tag("project[contentlicense][#{i}]", i, choosen_contentlicenses.include?(i)) + ( i > 0 ? link_to( Project.content_license_to_s(i), _("url_link_for_#{Project.content_license_to_s(i)}"), :target => "_blank" ) : t(Project.content_license_to_s(i)) ) + "<br>\n"
   end
   tmp_contentlicenses = "<div style=\"height: 150px; overflow: auto\">#{tmp_contentlicenses}</div>"
 %>
@@ -154,8 +202,9 @@ AAA
             ' ' + mail_to( 'contact@openfoundry.org', 'New Category?' ),
   foo( 'Tags', false, t( 'CreateHelp.Project_Tags' ) ),
     "<div id=\"Tags_List\"><div></div>#{ @tagspan }</div>" + 
-    text_field_tag( 'Tags_Ctrl', '', :size => 20 ) + 
-    "<input type='button' value='#{ t( 'Button.AddTags' ) }' onclick='javascript: add_to_tags_list();'>",
+    text_field_tag( 'Tags_Ctrl', '', { :size => 20 } ) + 
+    "#{ t( 'Msg.Send_A_Tag' ) }" + 
+    "<div id=\"Tags_Remove\"><font color='#ff0000'>#{ t( 'Msg.Click_Remove' ) }</font></div>",
   foo("contactinfo", false, _("Project|Contactinfo|Help")),
     text_field('project', 'contactinfo', :maxlength => 255, :size => 50),
   foo("maturity", true, _("Project|Maturity|Help")),
@@ -193,3 +242,8 @@ AAA
 </fieldset>
 <!--[eoform:project]-->
 
+<a href="#" id="msg" class="medium" rel="msgbox" style="display: none;"></a>
+<div id="msgbox" style="display: none;">
+  <p></p>
+  <a href="#" class="close">close</a>
+</div>
